# vxl-1

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  README.md  configure-ubuntu-for-programming  ff  fn  ga  my_unix_cents.txt  myunmount-all  reduce-pdf-size  setup-for-development  setup-for-use  subst  subst.sed  test
algo/bapl/: CMakeLists.txt  bapl_keypoint_sptr.h  bapl_lowe_pyramid.hxx
algo/bcdg/: CMakeLists.txt  bcdg_finger.cxx  bcdg_finger_sptr.h  bcdg_frame.cxx  bcdg_frame.h  bcdg_local_option.h
algo/contourtracing/: CMakeLists.txt  Readme.txt  basic_utils.cpp  boundary_fill.cpp  compute-boundary-len.cpp  eno_image.cpp  eno_interpolant.cpp  eno_label_zerox.cpp  eno_zero_tracer.cpp  graphics.h  twod_dpoint.h  utils.cpp  utils.h
algo/curvematch/: CMakeLists.txt  WSearch.h  closed_dpmatch_2d.h  curve_dpmatch_2d_sptr.h
algo/loglin/: CMakeLists.txt  EdgeDetection.h  LogicalLinear.h  LogicalLinearFilters.h  PowellsAlgorithm.h  Utils.h  points.h
algo/shock/: CEDT.cpp  CMakeLists.txt  belements-dynval.cpp  belements.cpp  boundary-dynval.h  curve_utils.cxx  dyn-val.h  intersections.cpp  intersections.h  ishock-bnd-related.cpp  ishock-common.h  scdm.h  sielements.cpp
algo/softassign/: CMakeLists.txt
algo/susan/: CMakeLists.txt  edge_draw.h  getint.h  int_to_char.c  median.c  setup_brightness_lut.h  susan_corners_quick.h  susan_edges.c  susan_edges_small.h  susan_principle.h  susan_principle_small.c  susan_sub.h
basic/dbbl/: CMakeLists.txt  dbbl_subsequence.h
basic/dbnl/: CMakeLists.txt  dbnl_sinc.h
basic/dbsol/: CMakeLists.txt  dbsol_geno_curve_2d.h  dbsol_geno_curve_2d_sptr.h  dbsol_geno_measures.h  dbsol_gshock.h  dbsol_gshock_curve_2d.h  dbsol_gshock_curve_2d_sptr.h  dbsol_gshock_sptr.h  dbsol_interp_curve_2d_sptr.h
basic/dbspi/: CMakeLists.txt  dbspi_curve_distance.h
basic/dbsta/: CMakeLists.txt  dbsta_detector_gaussian.h  dbsta_discrete.txx  dbsta_distribution.h  dbsta_functor.h  dbsta_functor_sptr.h  dbsta_gaussian.h  dbsta_gaussian_full.hxx  dbsta_gaussian_indep.hxx  dbsta_gaussian_sphere.hxx  dbsta_gaussian_sphere.txx  dbsta_histogram.h  dbsta_histogram.hxx  dbsta_histogram.txx  dbsta_mixture.h  dbsta_mixture.hxx  dbsta_mixture.txx  vbl_smart_ptr_io_wo_serialization.txx
basic/dbtest/: CMakeLists.txt
basic/dbvidl/: CMakeLists.txt  dbvidl_boulder_video_codec.cxx
basic/dbxml/: CMakeLists.txt  dbxml_algos.h  dbxml_vector_xio.hxx  dbxml_xio.cxx  dbxml_xio.h
brcv/mvg/: CMakeLists.txt
brcv/seg/: CMakeLists.txt
brcv/trk/: CMakeLists.txt
breye/b3d/: CMakeLists.txt
breye/bvis/: CMakeLists.txt  bvis_curve_tableau.cxx  bvis_displayer.h  bvis_gl_codec_sptr.h  bvis_main.cxx  bvis_manager.hxx  bvis_manager.txx  bvis_manager_traits.h  bvis_mapper.cxx  bvis_mview_manager_sptr.h  bvis_mview_view_tableau.h  bvis_tool_manager.txx  bvis_view_tableau.h
breye/vidpro/: CMakeLists.txt  vidpro_object_stream.cxx  vidpro_process_manager.h  vidpro_repository.h  vidpro_repository_sptr.h
breye/vorl/: CMakeLists.txt  vorl.h  vorl_movie_extractor.cxx
breye1/: CMakeLists.txt
breye1/.svn/: all-wcprops  entries
breye1/bpro1/: CMakeLists.txt
breye1/bvis1/: CMakeLists.txt  bvis1_gl_codec.h  bvis1_manager.cxx  bvis1_util.h
breye1/dbvis1/: CMakeLists.txt
breye1/vidl1/: CMakeLists.txt
breye1/vidpro1/: CMakeLists.txt
breye1/vorl1/: CMakeLists.txt  track.h  vorl1_movie_extractor.cxx
contrib/: CMakeLists.txt
contrib/.svn/: all-wcprops  entries
contrib/Gregistration/: CMakeLists.txt
contrib/Manifold_extraction/: CMakeLists.txt  Lie_contour_match.cxx  Lie_group_operations_3d.h  vehicle_model_3d.h  vrml_print.h
contrib/Spatemp/: CMakeLists.txt
contrib/amir/: CMakeLists.txt
contrib/anil/: CMakeLists.txt
contrib/biotree/: CMakeLists.txt
contrib/bm/: CMakeLists.txt
contrib/bvam/: CMakeLists.txt  bvam_apm_processor.h  bvam_image_metadata.h  bvam_memory_chunk.cxx  bvam_mog_grey_processor.cxx  bvam_mog_rgb_processor.h  bvam_util.h  bvam_voxel_grid.hxx  bvam_voxel_slab.hxx  bvam_voxel_slab_iterator.h  bvam_voxel_storage.h  bvam_voxel_storage_disk.hxx  bvam_voxel_traits.h  bvam_voxel_world.h
contrib/bvam_batch/: CMakeLists.txt  batch_bvam.h  example_train_script.py
contrib/bwm_lidar/: CMakeLists.txt
contrib/can/: CMakeLists.txt
contrib/cluster_mpi/: CMakeLists.txt
contrib/curve2d/: CMakeLists.txt  geno_app.cxx
contrib/db3dapp/: CMakeLists.txt  MeshEditorMenu.cxx  SceneEventHandler.cxx
contrib/dbctrkapp/: CMakeLists.txt
contrib/dbmsh3dapp/: CMakeLists.txt
contrib/dbpz_hindsite/: CMakeLists.txt  Curve.h  PuzzleSolving.h  bfrag2DManager.cxx  bfrag2DManager.h  vgui_bfrag2D_tableau.cxx  xform.h
contrib/dbpz_hindsite_2/: CMakeLists.txt  bfrag_Menu.cxx  bgui_vsol_soview2D_new.h  my_bfrag_Menu.cxx  vgui_bfrag2D_tableau.h  vgui_soview2D_bfrag2D.h
contrib/dbpz_hindsite_pair_match/: CMakeLists.txt  my_bsol_intrinsic_curve_2d.cxx  pairMatchMainMenu.cxx
contrib/dbrec_lib/: CMakeLists.txt
contrib/dbsk3dapp/: CMakeLists.txt  dborl_shock3d_match_params.h  dbsk3dapp_action.h  dbsk3dapp_main.cxx  dbsk3dapp_view_manager.cxx  introduction_doxy.txt
contrib/dbvxm/: CMakeLists.txt
contrib/dbvxm_batch/: CMakeLists.txt  change_detection_multi.py  world_model_params.xml
contrib/dec/: CMakeLists.txt
contrib/edge_det/: CMakeLists.txt
contrib/edubrito/: CMakeLists.txt
contrib/fatih/: CMakeLists.txt
contrib/fine/: CMakeLists.txt
contrib/firat/: CMakeLists.txt
contrib/geodesic_mesh/: CMakeLists.txt  cone.cxx  cone.h  ctree.h  llist.h  structs.h
contrib/gould/: CMakeLists.txt
contrib/han/: CMakeLists.txt
contrib/int_cedt3d/: CMakeLists.txt  cedt3d.h  cedt3d_utils.C  dt_by_3d_cedt.h
contrib/isabel/: CMakeLists.txt
contrib/itrack/: CMakeLists.txt
contrib/knee_cartilage/: CMakeLists.txt
contrib/levelset_seg/: CMakeLists.txt
contrib/maruthi/: CMakeLists.txt
contrib/matching_gui/: CMakeLists.txt  matching_gui_menu.cxx  matching_gui_menu.h
contrib/mauro/: CMakeLists.txt
contrib/medial_livewire/: CMakeLists.txt  example_compute_fish_sdt.cxx
contrib/meshvis/: CMakeLists.txt
lemsvxl/: .gitignore  CMakeLists.txt
(+20979 files in other folders)
